fix: Prevent shift in hero as image loads

--- a/app/frontend/scss/elements/_hero.scss
+++ b/app/frontend/scss/elements/_hero.scss
@@ -61,5 +61,6 @@
   img {
     width: 100%;
     height: auto;
+    aspect-ratio: 700 / 442;
   }
 }
